fixed some styling on mobile

--- a/src/web/scss/index.scss
+++ b/src/web/scss/index.scss
@@ -1,4 +1,8 @@
-@import url("./fonts.css");
-@import url("./shared.css");
-@import url("./screen.css") screen;
-@import url("./pdf.css") print;
+@import "./fonts.scss";
+@import "./shared.scss";
+@import "./screen.scss" screen;
+@import "./pdf.scss" print;
+
+// @media screen {
+// 	@import "./screen.scss";
+// }
